# duckdb-html-readability

./: Cargo.toml  Makefile
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
test/sql/: html_readability.test
