[package]
name = "html_readability"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
name = "html_readability"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "=1.4.3", features = ["vtab-loadable", "vscalar"] }
duckdb-loadable-macros = "=0.1.13"
libduckdb-sys = { version = "=1.4.3", features = ["loadable-extension"] }
readability = { version = "0.3", default-features = false }
url = "2"
